WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157889
[ARM] Fix the Wcast-align warning in LinkBuffer.cpp
https://bugs.webkit.org/show_bug.cgi?id=157889
Summary
[ARM] Fix the Wcast-align warning in LinkBuffer.cpp
Csaba Osztrogonác
Reported
2016-05-19 04:54:56 PDT
./../Source/JavaScriptCore/assembler/LinkBuffer.cpp: In function 'void JSC::recordLinkOffsets(JSC::AssemblerData&, int32_t, int32_t, int32_t)': ../../Source/JavaScriptCore/assembler/LinkBuffer.cpp:93:73: error: cast from 'char*' to 'int32_t* {aka int*}' increases required alignment of target type [-Werror=cast-align] int32_t* offsets = reinterpret_cast<int32_t*>(assemblerData.buffer()); ^ cc1plus: all warnings being treated as errors
Attachments
Patch
(1.43 KB, patch)
2016-05-19 04:55 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-05-19 04:55:50 PDT
Created
attachment 279381
[details]
Patch
WebKit Commit Bot
Comment 2
2016-05-25 06:02:16 PDT
Comment on
attachment 279381
[details]
Patch Clearing flags on attachment: 279381 Committed
r201380
: <
http://trac.webkit.org/changeset/201380
>
WebKit Commit Bot
Comment 3
2016-05-25 06:02:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug