[ARM] Fix the Wcast-align warning in LinkBuffer.cpp https://bugs.webkit.org/show_bug.cgi?id=157889

Reviewed by Darin Adler.

* assembler/LinkBuffer.cpp:
(JSC::recordLinkOffsets):


Canonical link: https://commits.webkit.org/176184@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201380 268f45cc-cd09-0410-ab3c-d52691b4dbfc