Source/JavaScriptCore/assembler/LinkBuffer.cpp
@@ -90,7 +90,7 @@ static ALWAYS_INLINE void recordLinkOffsets(AssemblerData& assemblerData, int32_
 {
     int32_t ptr = regionStart / sizeof(int32_t);
     const int32_t end = regionEnd / sizeof(int32_t);
-    int32_t* offsets = reinterpret_cast<int32_t*>(assemblerData.buffer());
+    int32_t* offsets = reinterpret_cast_ptr<int32_t*>(assemblerData.buffer());
     while (ptr < end)
         offsets[ptr++] = offset;
 }
